--- a/trunk/Portal/media/skins/Gold/Gold.css
+++ b/trunk/Portal/media/skins/Gold/Gold.css
@@ -169,6 +169,19 @@ a.noHoverLink:hover
 	padding: 0;
 }
 
+.menuBtn .bCenter span
+{
+	-webkit-transition-property:margin-left;
+	-moz-transition-property:margin-left;
+	-webkit-transition-duration: 0.5s, 0.5s;
+	-moz-transition-duration: 0.5s, 0.5s;
+}
+
+.menuBtn:hover .bCenter span
+{
+	margin-left:5px;
+}
+
 a
 {
 	text-decoration: none;
@@ -953,6 +966,19 @@ span.button
 	padding-right: 2px;
 }
 
+.button .menuLink
+{
+	-webkit-transition-property:margin-left;
+	-moz-transition-property:margin-left;
+	-webkit-transition-duration: 0.5s, 0.5s;
+	-moz-transition-duration: 0.5s, 0.5s;
+}
+
+.menuBtn:hover .menuLink
+{
+	margin-left:-7px;
+}
+
 .menuLink
 {
 	margin:-3px -12px -3px -12px;
@@ -1640,6 +1666,18 @@ summary
 	-webkit-box-shadow: 3px 3px 3px #777;
 	-moz-box-shadow: 3px 3px 3px #777;
 	width:235px !important;
+	-webkit-transition-property:width, height;
+	-moz-transition-property:width, height;
+	-webkit-transition-duration: 0.5s, 0.5s;
+	-moz-transition-duration: 0.5s, 0.5s;
+}
+
+.articleMainBodyNewsImage:hover,
+.articleMainBodyNews img:hover
+{
+	width:350px !important;
+	position:absolute;
+	z-index:500;
 }
 
 .forumMainBody
@@ -1773,11 +1811,16 @@ summary
 {
 	display:block;
 	width:99%;
+	background-color:#cfecff;
+	-webkit-transition-property:background-color;
+	-moz-transition-property:background-color;
+	-webkit-transition-duration: 0.5s, 0.5s;
+	-moz-transition-duration: 0.5s, 0.5s;
 }
 
 .docsList li a:hover
 {
-	background-color:#d5f2FF;
+	background-color:#afccdf;
 }
 
 .docsList li.xx_event
