--- a/Portal/media/skins/Gold/Gold.css
+++ b/Portal/media/skins/Gold/Gold.css
@@ -1805,22 +1805,37 @@ summary
 	background-repeat:no-repeat;
 	padding-left:20px;
 	margin-left:5px;
+	background-color:#cfecff;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	-webkit-transition-property:background-color;
+	-moz-transition-property:background-color;
+	-webkit-transition-duration: 0.5s, 0.5s;
+	-moz-transition-duration: 0.5s, 0.5s;
+	margin:1px;
+	-webkit-box-shadow: 1px 1px 1px #cfecff;
+	-moz-box-shadow: 1px 1px 1px #cfecff;
+}
+
+.docsList li.xx_event:hover,
+.docsList li.xx_ctor:hover,
+.docsList li.xx_function:hover,
+.docsList li.xx_property:hover,
+.docsList li.xx_enum:hover
+{
+	background-color:#afccdf;
+	-webkit-box-shadow: 1px 1px 1px #777;
+	-moz-box-shadow: 1px 1px 1px #777;
 }
 
 .docsList li a
 {
 	display:block;
 	width:99%;
-	background-color:#cfecff;
-	-webkit-transition-property:background-color;
-	-moz-transition-property:background-color;
-	-webkit-transition-duration: 0.5s, 0.5s;
-	-moz-transition-duration: 0.5s, 0.5s;
 }
 
 .docsList li a:hover
 {
-	background-color:#afccdf;
 }
 
 .docsList li.xx_event
