--- a/trunk/Portal/media/RaAjaxOrg.css
+++ b/trunk/Portal/media/RaAjaxOrg.css
@@ -2,7 +2,7 @@
 .headerLogoBg
 {
 	height:270px;
-	background:transparent url(ajax.png) no-repeat 0 0;
+	background:transparent url(ajax.jpg) no-repeat 0 0;
 	width:1003px;
 	position:relative;
 	margin-bottom:22px;
