--- a/Portal/media/TheLightBringerOrg.css
+++ b/Portal/media/TheLightBringerOrg.css
@@ -2,7 +2,7 @@
 .headerLogoBg
 {
 	height:300px;
-	background:url('light-house.png') no-repeat 0 0;
+	background:url('light-house.jpg') no-repeat 0 0;
 	width:1024px;
 	position:relative;
 }
